--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,6 +6,58 @@ option{
 
 }
 
+.alert{
+    background-color:  #292b2c;
+      color: #fff;
+}
+.list-group-item {
+  background-color: #fff;
+  border-top: 1px solid  #292b2c;
+  border-left-color: #fff;
+  border-right-color: #fff;
+}
+
+.list-group-item:hover {
+  background-color:  #292b2c;
+    box-shadow: 0px 15px 20px rgba(41, 43, 44, 0.4);
+      color: #fff;
+        transform: translateY(-7px) translateX(-5px);
+}
+
+.wrap {
+  width:100%;
+  height: 100%;
+  margin-left : 5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  width: 100%;
+  height: 55px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: #292b2c;
+  box-shadow: 0px 15px 20px rgba(41, 43, 44, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
 .green_window {
     display: inline-block;
     width: 366px; height: 34px;
@@ -61,7 +113,7 @@ option{
 }
 .list-group{
   padding-top:80px;
-  height :100%;
+  height :auto;
 
 }
 
@@ -180,7 +232,7 @@ option{
            background: none;
     }
 select {
-width: 200px;
+width: 80%;
 padding: .8em .5em;
 border: 3px solid #999;
 font-family: inherit;
