--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -8,7 +8,7 @@
 
     <div class="container mb-3 pt-5">
       <br><br><br><br><br><br><br>
-      <fieldset class="pl-5 pt-5 pb-5 pr-5" style="border:1px solid grey; position:absolute;">
+      <fieldset class="pl-5 pt-5 pb-5 pr-5" style="border:1px solid grey;">
       <h3>로그인</h3>
       <form class="user-form" action="/login" method="post">
 
