--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,9 +6,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
         <li class="nav-item p-3 pl-5 pr-3"><a href="/" class="nav-link">Home</a></li>
-        <li class="nav-item p-3 pl-5 pr-3"><a href="/about" class="nav-link">여행지 분석</a></li>
+        <li class="nav-item p-3 pl-5 pr-3"><a href="/about" class="nav-link">빅데이터 분석</a></li>
         <li class="nav-item p-3 pl-5 pr-3"><a href="/posts" class="nav-link">자유게시판</a></li>
-    
+
         </ul>
       <ul class="navbar-nav ml-auto">
         <% if(isAuthenticated){ %>
