--- a/public/css/master.css
+++ b/public/css/master.css
@@ -5,25 +5,34 @@ body {
 option{
 
 }
-
-.alert{
-    background-color:  #292b2c;
-      color: #fff;
+.btn-secondary{
+  font-size:15px;
+  height:45px;
 }
-.list-group-item {
-  background-color: #fff;
-  border-top: 1px solid  #292b2c;
-  border-left-color: #fff;
-  border-right-color: #fff;
+.card{
+  align-content: center;
 }
-
+.card-header{
+  align-content: center;
+  text-align: center;
+}
+.btn-dark{
+  width:80%;
+  align-content: center;
+  background: #929292;
+  margin-left: 10%;
+}
 .list-group-item:hover {
+  font-size: 20px;
   background-color:  #292b2c;
     box-shadow: 0px 15px 20px rgba(41, 43, 44, 0.4);
       color: #fff;
         transform: translateY(-7px) translateX(-5px);
 }
-
+.alert-warning{
+  background-color:#292b2c;
+  color:#fff;
+}
 .wrap {
   width:100%;
   height: 100%;
@@ -42,7 +51,7 @@ option{
   letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
-  background-color: #fff;
+  background-color: #ebeeec;
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -65,7 +74,7 @@ option{
     background: white;
 }
 .input_text {
-    width: 348px; height: 21px;
+    width: 328px; height: 21px;
     margin: 6px 0 0 9px;
     border: 0;
     line-height: 21px;
@@ -97,7 +106,7 @@ option{
   text-overflow: ellipsis;
 }
 .crawlingfont{
-  font-size:12px;
+  font-size:18px;
   padding-left:1px;
   align-content: flex-start;
 }
@@ -106,13 +115,16 @@ option{
   font-family :sans-serif;
   padding-left : 30px;
   padding-top :45px;
-
-
+  font-size: 18px;
+  background-color: #fff;
+  border-top:1px solid #292b2c;
+  border-left-color: #fff;
+  border-right-color: #fff;
+  border-bottom-color:#fff;
   font-weight :bold;
-
 }
 .list-group{
-  padding-top:80px;
+  padding-top:10px;
   height :auto;
 
 }
@@ -236,12 +248,7 @@ width: 80%;
 padding: .8em .5em;
 border: 3px solid #999;
 font-family: inherit;
-background: url('arrow.jpg') no-repeat 95% 50%;
 border-radius: 15px;
--webkit-appearance: none;
--moz-appearance: none;
-appearance: none;
-
 }
 button{
   border-radius: 15px;
