--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-dark">
-    <div class="navbar-brand">광뚝</div>
+    <a class="navbar-brand" href="/">광뚝</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
