--- a/views/partials/twitter/yongin/yongin_01_all.ejs
+++ b/views/partials/twitter/yongin/yongin_01_all.ejs
@@ -1,18 +1,19 @@
-<div class='tableauPlaceholder' id='viz1591507002531' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top5_15893402384800&#47;TopN&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+<div class='tableauPlaceholder' id='viz1591508208551' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TopN_15915081973030&#47;TopN&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
-        <param name='name' value='Top5_15893402384800&#47;TopN' />
+        <param name='name' value='TopN_15915081973030&#47;TopN' />
         <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top5_15893402384800&#47;TopN&#47;1.png' />
+        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;TopN_15915081973030&#47;TopN&#47;1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
         <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' /></object></div>
+        <param name='display_count' value='yes' />
+        <param name='filter' value='publish=yes' /></object></div>
 <script type='text/javascript'>
-    var divElement = document.getElementById('viz1591507002531');
+    var divElement = document.getElementById('viz1591508208551');
     var vizElement = divElement.getElementsByTagName('object')[0];
     vizElement.style.width = '100%';
     vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
