--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -125,7 +125,7 @@
 
   $('document').ready(function() {
    var area0 = ["지역 구분","서울시","용인시","인천시","안산시","남양주시","가평군","고양시","수원시","강릉시","대전시","대구시","전주시","부산시","제주도"];
-    var area1 = ["전체","가로수길","동대문","북촌한옥마을","압구정","이태원","인사동","삼성동","서초구","서울역","신촌"];
+    var area1 = ["전체","가로수길","동대문","북촌한옥마을","압구정역","이태원","종각","삼성동","서초구","서울역","신촌"];
      var area2 = ["전체","에버랜드"];
      var area3 = ["전체","인천시청역","부평역","인하대"];
      var area4 = ["전체","고잔역","중앙역","한대앞역"];
