--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -131,7 +131,7 @@
      var area4 = ["전체","고잔역","중앙역","한대앞역"];
      var area5 = ["전체","북한강","퇴계원","호평동"];
      var area6 = ["전체","남이섬","아침고요수목원","쁘띠프랑스"];
-     var area7 = ["전체","킨텍스","종합운동장","일산호수공원","일산 백석동"]; //고양
+     var area7 = ["전체","킨텍스","종합운동장","일산호수공원","백석동"]; //고양
      var area8 = ["전체","수원역","아주대","인계동","장안구"];
      var area9 = ["전체","강릉시내","경포대"];
      var area10 = ["전체","서대전역","시청","대전터미널","충남대","한남대","가장동","중앙로"];
