--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,234 +1,343 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <%- include('../partials/head') %>
+  <head>
+    <%- include('../partials/head') %>
   </head>
   <body>
     <%- include('../partials/nav') %>
 
     <div class="container-fluid mb-3">
+      <div class="container-fluid">
+        <br /><br />
+        <h2 class="text-center">빅데이터 분석</h2>
+        <br />
 
-          <div class="container-fluid">
-            <br><br>
-            <h2 class="text-center">빅데이터 분석</h2>
-            <br>
-
-      <div class="row">
-        <a class="col-lg-3"></a>
-        <select class="col-lg-3 d-block" for="sidoname" name="sido1" id="sido1" ></select>
-        <select class="col-lg-3 d-block" for="gugunname"name="gugun1" id="gugun1" ></select>
-        <button class="button col-lg-3" onclick="changediv()" style="font-size:20px; font-weight:bold;">검색</button>
-      </div>
-          </div>
-
-  <div class="row">
-
-  <div class="col-12 col-lg-2 mb-3 ">
-
-
-                    <div class="list-group">
-                      <% if(option == 'top10') { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href="top10?sido=<%= sido %>&gugun=<%= gugun %>" style="background:#292b2c;  color:#fff;">트윗량TopN</a>
-                     <% } else { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href="top10?sido=<%= sido %>&gugun=<%= gugun %>">트윗량TopN</a>
-                     <% }  %>
-
-                     <% if(option == 'categori') { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href="categori?sido=<%= sido %>&gugun=<%= gugun %>" style="background:#292b2c;  color:#fff;">카테고리별 분석 </a>
-                     <% } else { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href='categori?sido=<%= sido %>&gugun=<%= gugun %>'>카테고리별 분석 </a>
-                     <% }  %>
-
-                     <% if(option == 'hotplace') { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href="hotplace?sido=<%= sido %>&gugun=<%= gugun %>" style="background:#292b2c;  color:#fff;">카테고리 순위</a>
-                     <% } else { %>
-                       <a class="list-group-item list-group-item-action crawlingfont" href='hotplace?sido=<%= sido %>&gugun=<%= gugun %>'>카테고리 순위</a>
-                     <% }  %>
-
-                  </div>
-
-
-
-
-
-  </div>
-
-
-  <div class= "main col-12 col-lg-10 mb-3">
-    <% if(option == 'top10') {%>
-
-
-    <%- include(path) %>
-    <% } else if(option == 'categori'){ %>
-
-
-
-      <%- include(path) %>
-    <% } else if(option == 'error') { %>
-
-
-
-      <div class="col-12 alert alert-danger alert-dismissible fade show" role="alert">
-        죄송합니다! <strong>지역을 올바르게 선택</strong>하신 후에 다시한번 검색해주시면 감사하겠습니다.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <% } else if(option == 'cerror') { %>
-  <div class="col-12 alert alert-danger alert-dismissible fade show" role="alert">
-    죄송합니다! <strong>'전체'</strong>항목에서는 카테고리별 분석을 지원하지 않습니다.
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-
-    <% } else if(option =='hotplace'){ %>
-      <% if(dataexist =='false') { %>
-        <div class="col-12 alert alert-warning alert-dismissible fade show" role="alert">
-          죄송합니다! <strong>지역을 올바르게 선택</strong>하신 후에 다시한번 접속해주시면 감사하겠습니다.
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">3</span>
+        <div class="row">
+          <a class="col-lg-3"></a>
+          <select
+            class="col-lg-3 d-block"
+            for="sidoname"
+            name="sido1"
+            id="sido1"
+          ></select>
+          <select
+            class="col-lg-3 d-block"
+            for="gugunname"
+            name="gugun1"
+            id="gugun1"
+          ></select>
+          <button
+            class="button col-lg-3"
+            onclick="changediv()"
+            style="font-size: 20px; font-weight: bold"
+          >
+            검색
           </button>
         </div>
-      <% }else{ %>
+      </div>
 
-      <%- include('../partials/crawling') %>
-      <% } %>
-    <% } else if(option == 'normal'){ %>
+      <div class="row">
+        <div class="col-12 col-lg-2 mb-3">
+          <div class="list-group">
+            <% if(option == 'top10') { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="top10?sido=<%= sido %>&gugun=<%= gugun %>"
+              style="background: #292b2c; color: #fff"
+              >트윗량TopN</a
+            >
+            <% } else { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="top10?sido=<%= sido %>&gugun=<%= gugun %>"
+              >트윗량TopN</a
+            >
+            <% } %> <% if(option == 'categori') { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="categori?sido=<%= sido %>&gugun=<%= gugun %>"
+              style="background: #292b2c; color: #fff"
+              >카테고리별 분석
+            </a>
+            <% } else { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="categori?sido=<%= sido %>&gugun=<%= gugun %>"
+              >카테고리별 분석
+            </a>
+            <% } %> <% if(option == 'hotplace') { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="hotplace?sido=<%= sido %>&gugun=<%= gugun %>"
+              style="background: #292b2c; color: #fff"
+              >카테고리 순위</a
+            >
+            <% } else { %>
+            <a
+              class="list-group-item list-group-item-action crawlingfont"
+              href="hotplace?sido=<%= sido %>&gugun=<%= gugun %>"
+              >카테고리 순위</a
+            >
+            <% } %>
+          </div>
+        </div>
 
-    <%- include(path) %>
-    <% }  else { %>
-            <%- include('../partials/twitter/all') %>
-    <% } %>
+        <div class="main col-12 col-lg-10 mb-3">
+          <% if(option == 'top10') {%> <%- include(path) %> <% } else if(option
+          == 'categori'){ %> <%- include(path) %> <% } else if(option ==
+          'error') { %>
 
+          <div
+            class="col-12 alert alert-danger alert-dismissible fade show"
+            role="alert"
+          >
+            죄송합니다! <strong>지역을 올바르게 선택</strong>하신 후에 다시한번
+            검색해주시면 감사하겠습니다.
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <% } else if(option == 'cerror') { %>
+          <div
+            class="col-12 alert alert-danger alert-dismissible fade show"
+            role="alert"
+          >
+            죄송합니다! <strong>'전체'</strong>항목에서는 카테고리별 분석을
+            지원하지 않습니다.
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
-
-
-
-
-
-
-
-</div>
-
-
-
-</div>
-
-</div>
-
-
-
-
+          <% } else if(option =='hotplace'){ %> <% if(dataexist =='false') { %>
+          <div
+            class="col-12 alert alert-warning alert-dismissible fade show"
+            role="alert"
+          >
+            죄송합니다! <strong>지역을 올바르게 선택</strong>하신 후에 다시한번
+            접속해주시면 감사하겠습니다.
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">3</span>
+            </button>
+          </div>
+          <% }else{ %> <%- include('../partials/crawling') %> <% } %> <% } else
+          if(option == 'normal'){ %> <%- include(path) %> <% } else { %> <%-
+          include('../partials/twitter/all') %> <% } %>
+        </div>
+      </div>
+    </div>
   </body>
   <script>
+    $("document").ready(function () {
+      var area0 = [
+        "지역 구분",
+        "서울시",
+        "용인시",
+        "인천시",
+        "안산시",
+        "남양주시",
+        "가평군",
+        "고양시",
+        "수원시",
+        "강릉시",
+        "대전시",
+        "대구시",
+        "전주시",
+        "부산시",
+        "제주도",
+      ];
+      var area1 = [
+        "전체",
+        "가로수길",
+        "동대문",
+        "북촌한옥마을",
+        "압구정역",
+        "이태원",
+        "종각",
+        "삼성동",
+        "서초구",
+        "서울역",
+        "신촌",
+      ];
+      var area2 = ["전체", "에버랜드"];
+      var area3 = ["전체", "인천시청역", "부평역", "인하대"];
+      var area4 = ["전체", "고잔역", "중앙역", "한대앞역"];
+      var area5 = ["전체", "북한강", "퇴계원", "호평동"];
+      var area6 = ["전체", "남이섬", "아침고요수목원", "쁘띠프랑스"];
+      var area7 = ["전체", "킨텍스", "종합운동장", "일산호수공원", "백석동"]; //고양
+      var area8 = ["전체", "수원역", "아주대", "인계동", "장안구"];
+      var area9 = ["전체", "강릉시내", "경포대"];
+      var area10 = [
+        "전체",
+        "서대전역",
+        "시청",
+        "대전터미널",
+        "충남대",
+        "한남대",
+        "가장동",
+        "중앙로",
+      ];
+      var area11 = [
+        "전체",
+        "대구중앙로",
+        "동성로",
+        "동대구역",
+        "수성구",
+        "계명대",
+        "두류동",
+        "수성",
+      ];
+      var area12 = [
+        "전체",
+        "전북대",
+        "전주대",
+        "전주월드컵경기장",
+        "완산구",
+        "전주한옥마을",
+      ];
+      var area13 = [
+        "전체",
+        "중앙동",
+        "남천동",
+        "서면",
+        "교대역",
+        "센텀시티",
+        "해운대",
+      ];
+      var area14 = ["전체", "제주시", "서귀포시"];
 
-  $('document').ready(function() {
-   var area0 = ["지역 구분","서울시","용인시","인천시","안산시","남양주시","가평군","고양시","수원시","강릉시","대전시","대구시","전주시","부산시","제주도"];
-    var area1 = ["전체","가로수길","동대문","북촌한옥마을","압구정역","이태원","종각","삼성동","서초구","서울역","신촌"];
-     var area2 = ["전체","에버랜드"];
-     var area3 = ["전체","인천시청역","부평역","인하대"];
-     var area4 = ["전체","고잔역","중앙역","한대앞역"];
-     var area5 = ["전체","북한강","퇴계원","호평동"];
-     var area6 = ["전체","남이섬","아침고요수목원","쁘띠프랑스"];
-     var area7 = ["전체","킨텍스","종합운동장","일산호수공원","백석동"]; //고양
-     var area8 = ["전체","수원역","아주대","인계동","장안구"];
-     var area9 = ["전체","강릉시내","경포대"];
-     var area10 = ["전체","서대전역","시청","대전터미널","충남대","한남대","가장동","중앙로"];
-     var area11 = ["전체","대구중앙로","동성로","동대구역","수성구","계명대","두류동","수성"];
-     var area12 = ["전체","전북대","전주대","전주월드컵경기장","완산구","전주한옥마을"];
-     var area13 = ["전체","중앙동","남천동","서면","교대역","센텀시티","해운대"];
-     var area14 = ["전체","제주시","서귀포시"];
+      //셀렉트박스 변수 저장
+      const sido_selected = document.getElementById("sido1");
+      const gugun_selected = document.getElementById("gugun1");
+      // 시/도 선택 박스 초기화
 
-
-
-//셀렉트박스 변수 저장
-const sido_selected = document.getElementById("sido1");
-const gugun_selected = document.getElementById("gugun1");
-   // 시/도 선택 박스 초기화
-
-
-   if('<%= sido %>' == 'unknown'){
-   $("select[name^=sido]").each(function() {
-    $selsido = $(this);
-    $.each(eval(area0), function() {
-     $selsido.append("<option value='"+this+"'>"+this+"</option>");
-    });
-    $selsido.next().append("<option value=''>세부지역 구분</option>");
-   });
- } else {
-   $("select[name^=sido]").each(function() {
-    $selsido = $(this);
-    $.each(eval(area0), function() {
-      if('<%= sido %>' == this){
-         $selsido.append("<option value='"+this+"' selected>"+this+"</option>");
-      }else{
-     $selsido.append("<option value='"+this+"'>"+this+"</option>");
-   }
-    });
-    if('<%= gugun %>' == 'unknown'){
-    $selsido.next().append("<option value=''>세부지역 구분</option>");
-  }
-  else{
-        var area = "area"+$("option",$(this)).index($("option:selected",$(this)));
-
-    $.each(eval(area), function() {
-      if('<%= gugun %>' == this){
-         $selsido.next().append("<option value='"+this+"' selected>"+this+"</option>");
+      if ("<%= sido %>" == "unknown") {
+        $("select[name^=sido]").each(function () {
+          $selsido = $(this);
+          $.each(eval(area0), function () {
+            $selsido.append(
+              "<option value='" + this + "'>" + this + "</option>"
+            );
+          });
+          $selsido.next().append("<option value=''>세부지역 구분</option>");
+        });
       } else {
-       $selsido.next().append("<option value='"+this+"'>"+this+"</option>");
-}
+        $("select[name^=sido]").each(function () {
+          $selsido = $(this);
+          $.each(eval(area0), function () {
+            if ("<%= sido %>" == this) {
+              $selsido.append(
+                "<option value='" + this + "' selected>" + this + "</option>"
+              );
+            } else {
+              $selsido.append(
+                "<option value='" + this + "'>" + this + "</option>"
+              );
+            }
+          });
+          if ("<%= gugun %>" == "unknown") {
+            $selsido.next().append("<option value=''>세부지역 구분</option>");
+          } else {
+            var area =
+              "area" +
+              $("option", $(this)).index($("option:selected", $(this)));
+
+            $.each(eval(area), function () {
+              if ("<%= gugun %>" == this) {
+                $selsido
+                  .next()
+                  .append(
+                    "<option value='" +
+                      this +
+                      "' selected>" +
+                      this +
+                      "</option>"
+                  );
+              } else {
+                $selsido
+                  .next()
+                  .append("<option value='" + this + "'>" + this + "</option>");
+              }
+            });
+          }
+        });
+      }
+
+      // 시/도 선택시 구/군 설정
+
+      $("select[name^=sido]").change(function () {
+        var area =
+          "area" + $("option", $(this)).index($("option:selected", $(this))); // 선택지역의 구군 Array
+        var $gugun = $(this).next(); // 선택영역 군구 객체
+        $("option", $gugun).remove(); // 구군 초기화
+
+        if (area == "area0") {
+          $gugun.append("<option value=''>세부지역 구분</option>");
+        } else {
+          $.each(eval(area), function () {
+            $gugun.append("<option value='" + this + "'>" + this + "</option>");
+          });
+        }
+      });
     });
-  }
-   });
- }
 
-
-   // 시/도 선택시 구/군 설정
-
-   $("select[name^=sido]").change(function() {
-    var area = "area"+$("option",$(this)).index($("option:selected",$(this))); // 선택지역의 구군 Array
-    var $gugun = $(this).next(); // 선택영역 군구 객체
-    $("option",$gugun).remove(); // 구군 초기화
-
-    if(area == "area0"){
-     $gugun.append("<option value=''>세부지역 구분</option>");
-   }
-
-    else {
-     $.each(eval(area), function() {
-
-        $gugun.append("<option value='"+this+"'>"+this+"</option>");
-
-     });
+    //버튼 함수
+    function changediv() {
+      if (
+        document.getElementById("sido1").value == "시/도 선택" ||
+        document.getElementById("gugun1").value == ""
+      ) {
+        var sido = "unknown";
+        var gugun = "unknown";
+        location.href = "/top10?sido=" + sido + "&gugun=" + gugun;
+      } else {
+        if ("<%= option %>" == "top10" || "<%= option %>" == "normal") {
+          location.href =
+            "/top10?sido=" +
+            document.getElementById("sido1").value +
+            "&gugun=" +
+            document.getElementById("gugun1").value;
+        } else if ("<%= option %>" == "hotplace") {
+          location.href =
+            "/hotplace?sido=" +
+            document.getElementById("sido1").value +
+            "&gugun=" +
+            document.getElementById("gugun1").value;
+        } else if ("<%= option %>" == "categori") {
+          location.href =
+            "/categori?sido=" +
+            document.getElementById("sido1").value +
+            "&gugun=" +
+            document.getElementById("gugun1").value;
+        } else if ("<%= option %>" == "error") {
+          location.href =
+            "/top10?sido=" +
+            document.getElementById("sido1").value +
+            "&gugun=" +
+            document.getElementById("gugun1").value;
+        } else {
+          location.href =
+            "/top10?sido=" +
+            document.getElementById("sido1").value +
+            "&gugun=" +
+            document.getElementById("gugun1").value;
+        }
+      }
     }
-   });
-
-
-  });
-
-//버튼 함수
-function changediv(){
-  if(document.getElementById("sido1").value == '시/도 선택' || document.getElementById("gugun1").value == ''){
-  var sido = 'unknown';
-  var gugun ='unknown';
-  location.href="/top10?sido=" + sido + "&gugun=" + gugun;
-} else {
- if('<%= option %>' == 'top10' || '<%= option %>' =='normal'){
-  location.href="/top10?sido=" + document.getElementById("sido1").value + "&gugun=" + document.getElementById("gugun1").value;
-}
-else if('<%= option %>' == 'hotplace'){
-  location.href="/hotplace?sido=" + document.getElementById("sido1").value + "&gugun=" + document.getElementById("gugun1").value;
-}
-else if('<%= option %>' == 'categori'){
-  location.href="/categori?sido=" + document.getElementById("sido1").value + "&gugun=" + document.getElementById("gugun1").value;
-}
-else if('<%= option %>' == 'error'){
-location.href="/top10?sido=" + document.getElementById("sido1").value + "&gugun=" + document.getElementById("gugun1").value;
-}else{
- location.href="/top10?sido=" + document.getElementById("sido1").value + "&gugun=" + document.getElementById("gugun1").value;
-}
-}
-}
   </script>
 </html>
