--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -7,43 +7,53 @@
     <%- include('../partials/nav') %>
 
     <div class="container mb-3 pt-5">
-      <br><br><br><br><br><br>
-      <fieldset class="pl-5 pt-5 pb-5 pr-5" style="border:1px solid grey;">
-      <h3>로그인</h3>
-      <form class="user-form" action="/login" method="post">
-
-        <div class="form-group row">
-          <label for="username" class="col-sm-3 col-form-label">아이디</label>
-          <div class="col-sm-9">
-            <input type="text" id="username" name="username" value="<%= username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>">
-            <% if(errors.username){ %>
+      <br /><br /><br /><br /><br /><br />
+      <fieldset class="pl-5 pt-5 pb-5 pr-5" style="border: 1px solid grey">
+        <h3>로그인</h3>
+        <form class="user-form" action="/login" method="post">
+          <div class="form-group row">
+            <label for="username" class="col-sm-3 col-form-label">아이디</label>
+            <div class="col-sm-9">
+              <input
+                type="text"
+                id="username"
+                name="username"
+                value="<%= username %>"
+                class="form-control <%= (errors.username)?'is-invalid':'' %>"
+              />
+              <% if(errors.username){ %>
               <span class="invalid-feedback"><%= errors.username %></span>
-            <% } %>
+              <% } %>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label for="password" class="col-sm-3 col-form-label">비밀번호</label>
-          <div class="col-sm-9">
-            <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>">
-            <% if(errors.password){ %>
+          <div class="form-group row">
+            <label for="password" class="col-sm-3 col-form-label"
+              >비밀번호</label
+            >
+            <div class="col-sm-9">
+              <input
+                type="password"
+                id="password"
+                name="password"
+                value=""
+                class="form-control <%= (errors.password)?'is-invalid':'' %>"
+              />
+              <% if(errors.password){ %>
               <span class="invalid-feedback"><%= errors.password %></span>
-            <% } %>
+              <% } %>
+            </div>
           </div>
-        </div>
 
-        <% if(errors.login){ %>
+          <% if(errors.login){ %>
           <div class="invalid-feedback d-block"><%= errors.login %></div>
-        <% } %>
+          <% } %>
 
-        <div class="mt-3">
-          <input class="btn btn-primary" type="submit" value="로그인">
-        </div>
-
-      </form>
-    </fieldset>
+          <div class="mt-3">
+            <input class="btn btn-primary" type="submit" value="로그인" />
+          </div>
+        </form>
+      </fieldset>
     </div>
-
   </body>
-
 </html>
