--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
     <style>
       .image {
-        background: url(https://www.openbusinesscouncil.org/wp-content/uploads/2019/09/BigData.jpg)
+        background: url("BigData.jpg")
           no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
