--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
     <style>
       .image {
-        background: url('/BigData.jpg')
+        background: url('/BigData.webp')
           no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
